Modified PointerEvent.width/height to double of TouchPoint.radius_x/y.

TouchPoint radius of the ellipse should exactly equal to half
the corresponding extent of the rectangle.
assuming non-rotated touch geometry.

Bug: 731725
Change-Id: Ibf19c867549f13676afbc6cd0d504850fb415159
Reviewed-on: https://chromium-review.googlesource.com/762827
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Reviewed-by: Jeremy Roman <jbroman@chromium.org>
Reviewed-by: Navid Zolghadr <nzolghadr@chromium.org>
Commit-Queue: Mustaq Ahmed <mustaq@chromium.org>
Cr-Commit-Position: refs/heads/master@{#522448}
Former-commit-id: ac6d1582824815fe59757189b0377773bb055375